--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ layout: default
           </div>
         </div>
       </div>                          
-<img class="img-fluid align-items-center d-md-block w-75 mx-auto mb-7" src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1554265683/svg/components/pointer-1.svg" alt=""> 
+<img class="img-fluid align-items-center d-md-block w-65 mx-auto mb-7" src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1554265683/svg/components/pointer-1.svg" alt=""> 
   
         </div>
       </div>
@@ -171,7 +171,7 @@ layout: default
             </div>
 </section>                 
                    
-<section class="slice-xl slice-video d-flex align-items-center" data-vide-bg="{{ site.baseurl }}/assets/videos/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%"><div style="position: absolute; z-index: -1; top: 0px; left: 0px; bottom: 0px; right: 0px; overflow: hidden; background-size: cover; background-color: transparent; background-repeat: no-repeat; background-position: 0% 0%;"><video autoplay="" loop="" style="margin: auto; position: absolute; z-index: -1; top: 0%; left: 0%; transform: translate(0%, 0%); visibility: hidden; opacity: 0; width: auto; height: 602px;"><source src="../../assets/media/video/broadwaycrew.mp4" type="video/mp4"><source src="../../assets/media/video/broadwaycrew.webm" type="video/webm"><source src="../../assets/media/video/broadwaycrew.ogv" type="video/ogg"></video></div>
+<section class="slice-xl slice-video d-flex align-items-centerhidden" style="display:none;" data-vide-bg="{{ site.baseurl }}/assets/videos/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%"><div style="position: absolute; z-index: -1; top: 0px; left: 0px; bottom: 0px; right: 0px; overflow: hidden; background-size: cover; background-color: transparent; background-repeat: no-repeat; background-position: 0% 0%;"><video autoplay="" loop="" style="margin: auto; position: absolute; z-index: -1; top: 0%; left: 0%; transform: translate(0%, 0%); visibility: hidden; opacity: 0; width: auto; height: 602px;"><source src="../../assets/media/video/broadwaycrew.mp4" type="video/mp4"><source src="../../assets/media/video/broadwaycrew.webm" type="video/webm"><source src="../../assets/media/video/broadwaycrew.ogv" type="video/ogg"></video></div>
                         <span class="mask mask-dark--style-1 alpha-7"></span>
                         <div class="container">
                             <div class="col">
